{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 255,
  "lineage": "d7221ba8-68e2-869d-fc52-d6b10369a95f",
  "resources": [
    {
      "module": "module.create-env",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "internet_gateway_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-06519ca8e994fd237",
            "vpc_id": "vpc-09959bd2a6f84d732"
          },
          "dependencies": [
            "module.create-env.aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create-env",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateaway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:internet-gateway/igw-053d7855f923a19ed",
            "id": "igw-053d7855f923a19ed",
            "owner_id": "505427597189",
            "tags": {
              "Name": "internet_gateaway"
            },
            "tags_all": {
              "Name": "internet_gateaway"
            },
            "vpc_id": "vpc-09959bd2a6f84d732"
          },
          "dependencies": [
            "module.create-env.aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create-env",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:route-table/rtb-0cd4335f7572c1a67",
            "id": "rtb-0cd4335f7572c1a67",
            "owner_id": "505427597189",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-06519ca8e994fd237",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053d7855f923a19ed",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testing-route"
            },
            "tags_all": {
              "Name": "testing-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-09959bd2a6f84d732"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-env.aws_egress_only_internet_gateway.internet_gateway_egress",
            "module.create-env.aws_internet_gateway.internet_gateaway",
            "module.create-env.aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create-env",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:subnet/subnet-05c09e4f289196f07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05c09e4f289196f07",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505427597189",
            "tags": {
              "Name": "testing-subnet"
            },
            "tags_all": {
              "Name": "testing-subnet"
            },
            "vpc_id": "vpc-09959bd2a6f84d732"
          },
          "dependencies": [
            "module.create-env.aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create-env",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testing-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:vpc/vpc-09959bd2a6f84d732",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.1.0/24",
            "default_network_acl_id": "acl-0a530ae3a1ab8fe5c",
            "default_route_table_id": "rtb-093f79fee62c7a7f9",
            "default_security_group_id": "sg-085a253e801eea75d",
            "dhcp_options_id": "dopt-01db4e7718e6df7aa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09959bd2a6f84d732",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-01d761cadbf5cdf49",
            "ipv6_cidr_block": "2406:da18:bc1:b700::/56",
            "main_route_table_id": "rtb-093f79fee62c7a7f9",
            "owner_id": "505427597189",
            "tags": {
              "Name": "testing-vpc"
            },
            "tags_all": {
              "Name": "testing-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.instance-kubemaster",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_testing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:internet-gateway/igw-053d7855f923a19ed",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-09959bd2a6f84d732"
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "internet_gateaway"
                ]
              }
            ],
            "id": "igw-053d7855f923a19ed",
            "internet_gateway_id": "igw-053d7855f923a19ed",
            "owner_id": "505427597189",
            "tags": {
              "Name": "internet_gateaway"
            }
          }
        }
      ]
    },
    {
      "module": "module.instance-kubemaster",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:subnet/subnet-05c09e4f289196f07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 246,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "testing-subnet"
                ]
              }
            ],
            "id": "subnet-05c09e4f289196f07",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505427597189",
            "state": "available",
            "tags": {
              "Name": "testing-subnet"
            },
            "vpc_id": "vpc-09959bd2a6f84d732"
          }
        }
      ]
    },
    {
      "module": "module.instance-kubemaster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:vpc/vpc-09959bd2a6f84d732",
            "cidr_block": "10.0.1.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00c06c896d22f5356",
                "cidr_block": "10.0.1.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-01db4e7718e6df7aa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "testing-vpc"
                ]
              }
            ],
            "id": "vpc-09959bd2a6f84d732",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-01d761cadbf5cdf49",
            "ipv6_cidr_block": "2406:da18:bc1:b700::/56",
            "main_route_table_id": "rtb-093f79fee62c7a7f9",
            "owner_id": "505427597189",
            "state": "available",
            "tags": {
              "Name": "testing-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.instance-kubemaster",
      "mode": "managed",
      "type": "aws_eip",
      "name": "machine-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038c544c842db4245",
            "associate_with_private_ip": "10.0.1.120",
            "association_id": "eipassoc-0c39fa270b04ff392",
            "domain": "vpc",
            "id": "eipalloc-038c544c842db4245",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0396acb9e4617b72f",
            "private_dns": "ip-10-0-1-120.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-13-213-138-101.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.138.101",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.instance-kubemaster.aws_network_interface.network-interface-kubemaster-testing",
            "module.instance-kubemaster.data.aws_internet_gateway.internet_gateway_testing"
          ]
        }
      ]
    },
    {
      "module": "module.instance-kubemaster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "testing-kubemaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0adfdaea54d40922b",
            "availability_zone": "ap-southeast-1a",
            "get_password_data": false,
            "id": "i-0c84060fa79311e52",
            "instance_type": "t2.micro",
            "key_name": "testing-env",
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0396acb9e4617b72f"
              }
            ],
            "tags": {
              "Name": "kubemaster-0"
            },
            "tags_all": {
              "Name": "kubemaster-0"
            }
          },
          "dependencies": [
            "module.instance-kubemaster.aws_network_interface.network-interface-kubemaster-testing"
          ]
        }
      ]
    },
    {
      "module": "module.instance-kubemaster",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network-interface-kubemaster-testing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:network-interface/eni-0396acb9e4617b72f",
            "id": "eni-0396acb9e4617b72f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:a9:96:f4:14:78",
            "owner_id": "505427597189",
            "private_ip": "10.0.1.120",
            "private_ips": [
              "10.0.1.120",
              "10.0.1.121",
              "10.0.1.122",
              "10.0.1.123",
              "10.0.1.124"
            ],
            "private_ips_count": 4,
            "security_groups": [
              "sg-07e925c22198e2e7a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c09e4f289196f07",
            "tags": {
              "Name": "network_interface_kubemaster_testing"
            },
            "tags_all": {
              "Name": "network_interface_kubemaster_testing"
            }
          },
          "dependencies": [
            "module.instance-kubemaster.aws_security_group.security_test_kubemaster",
            "module.instance-kubemaster.data.aws_subnet.subnet_data",
            "module.instance-kubemaster.data.aws_vpc.vpc_data"
          ]
        }
      ]
    },
    {
      "module": "module.instance-kubemaster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_test_kubemaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:security-group/sg-07e925c22198e2e7a",
            "description": "testing environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e925c22198e2e7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Web",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "testing_environtment_sg",
            "name_prefix": "",
            "owner_id": "505427597189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-kubemaster-traffic"
            },
            "tags_all": {
              "Name": "security-kubemaster-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-09959bd2a6f84d732"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance-kubemaster.data.aws_vpc.vpc_data"
          ]
        }
      ]
    }
  ]
}